<resources>
    <string name="app_name" translatable="false">Ad-silence</string>
    <string name="notification_listener_name" translatable="false">Ad silence</string>
    <string name="notification_listener_settings_intent" translatable="false">android.settings.ACTION_NOTIFICATION_LISTENER_SETTINGS</string>
    <string name="accuradio_pkg_name" translatable="false">com.slipstream.accuradio</string>
    <string name="spotify_package_name" translatable="false">com.spotify.music</string>
    <string name="tidal_package_name" translatable="false">com.aspiro.tidal</string>
    <string name="pandora_package_name" translatable="false">com.pandora.android</string>
    <string name="soundcloud_package_name" translatable="false">com.soundcloud.android</string>
    <string name="accuradio_ad_text">Music will resume</string>
    <string name="grant_permission_text_view">App works by using Notification access</string>
    <string name="grant_notification_posting_permission_text_view">Android 13 and above requires notification posting permission</string>
    <string name="grant_permission_button">Grant Permission</string>
    <string name="grant_notification_posting_permission_button">Grant Notification Posting Permission</string>
    <string name="permission_granted">ALREADY GRANTED</string>
    <string name="granted">GRANTED</string>
    <string name="app_status">Enable (mute ads)</string>
    <string name="app_status_permission_not_granted">Enable (Grant Permission first)</string>
    <string name="about">about</string>
    <string name="select_apps">select apps</string>
    <string name="accuradio" translatable="false">Accuradio</string>
    <string name="spotify" translatable="false">Spotify</string>
    <string name="tidal" translatable="false">Tidal</string>
    <string name="about_window_text">\"Ad-silence\" silences ads on Accuradio, Spotify, Spotify-Lite, Tidal, Pandora, Soundcloud, and any user-configured apps. It works by utilizing notifications posted by these apps. Only notifications from these apps are accessed for identification and discarded immediately.         <![CDATA[This app is OpenSource. You can check the full source code on GitHub: <a href="https://github.com/aghontpi/ad-silence/">https://github.com/aghontpi/ad-silence/</a>]]>
        <![CDATA[<br/><br/>]]>

        <![CDATA[<b>
        Designed to be minimal &amp; lightweight, ~150KB.</b>]]>

        <![CDATA[<br/><br/>]]>

        <![CDATA[<b>
        If you face issues or want a new feature, kindly open an issue on GitHub.</b>]]>

        <![CDATA[<br/><br/>]]>

        <![CDATA[<b>
        SECURITY WARNING: Only install from GitHub, Google Play, or F-Droid. Bad actors can modify the code from other sources to read your notifications. If you got this from elsewhere, uninstall it immediately!</b>]]>

        <![CDATA[<br/><br/>]]>
        Made by <![CDATA[ <a href="https://github.com/aghontpi">aghontpi&lt;bluepie&gt;</a>]]> for OpenSource.
    </string>
    <string name="github">GitHub</string>
    <string name="report_issue">report issue</string>
    <string name="github_link" translatable="false">https://github.com/aghontpi/Ad-silence</string>
    <string name="not_installed">(not installed)</string>
    <string name="github_issues_link" translatable="false">https://github.com/aghontpi/ad-silence/issues/new</string>
    <string name="spotify_ad_string" translatable="false">Advertisement</string>
    <string name="android_constant_enabled_notification_listeners" translatable="false">enabled_notification_listeners</string>
    <string name="spotify_ad2" translatable="false">Spotify</string>
    <string name="tidal_ad_string" translatable="false">Advertisement</string>
    <string name="spotify_lite_package_name" translatable="false">com.spotify.lite</string>
    <string name="spotify_lite" translatable="false">Spotify Lite</string>
    <string name="pandora" translatable="false">Pandora</string>
    <string name="pandora_ad_string" translatable="false">Advertisement</string>
    <string name="pandora_ad_string_2" translatable="false">Skip Limit Exceeded</string>
    <string name="soundcloud" translatable="false">Soundcloud</string>
    <string name="soundcloud_ad_string" translatable="false">Advertisement</string>
    <string name="Experimental">Experimental</string>
    <string name="liveOne_package_name" translatable="false">com.slacker.radio</string>
    <string name="liveOne_ad_string" translatable="false">Advertisement</string>
    <string name="liveOne_ad_string_2" translatable="false">60 Minutes Uninterrupted Listening</string>
    <string name="liveone" translatable="false">LiveOne</string>
    <string name="beta" translatable="false">(Beta)</string>
    <string name="notifications_optional">Notification updates (optional)</string>
    <string name="disable_hibernation_text_view">Disable hibernation, so app can run in background without being affected by system. <![CDATA[  <a href="https://github.com/aghontpi/ad-silence/wiki/Disable-hibernation/">View help here!</a>]]></string>
    <string name="disable_hibernation">Disable Hibernation</string>
    <string name="disable_hibernation_granted">Hibernation disabled</string>
    <string name="help">(help)</string>
    <string name="cant_grant_permission_see_help_here">Cant grant permission? android introduced restrictions on android 13 and above. <![CDATA[  <a href="https://github.com/aghontpi/ad-silence/wiki/Restricted-Setting-or-Unable-to-grant-notification-permission">View wiki here!</a>]]></string>
    <string name="close">Close</string>
    <string name="disable_battery_optimization">Background Usage</string>
    <string name="status_enabled">Restricted</string>
    <string name="status_disabled">Unrestricted</string>
    <string name="background_usage_dialog_title">Allow Background Usage</string>
    <string name="background_usage_dialog_message">To ensure AdSilence works reliably in the background, please select \'Unrestricted\' or \'Don\'t optimize\' in the following battery settings screen.</string>
    <string name="open_settings">Open Settings</string>

    <!-- Custom App Dialog Strings -->
    <string name="add_custom_app">Add Custom App</string>
    <string name="reset">Reset</string>
    <string name="custom_app_help_text">Not sure what to put? <![CDATA[<a href="https://github.com/aghontpi/ad-silence/wiki/Custom_App_Wiki">View guide here!</a>]]></string>
    <string name="custom_app_overlay_hint">Tip: Use the package name of a pre-configured app (like Spotify) to add extra ad-blocking keywords.</string>
    <string name="custom_app_list_hint">Missed ads? For existing preconfigured apps, you can also use \'Add Custom App\' below to define new detection keywords.</string>
    <string name="app_name_label">App Name</string>
    <string name="app_name_hint">Enter the application title.</string>
    <string name="package_name_label">Package Name</string>
    <string name="package_name_hint">e.g., com.example.app</string>
    <string name="keywords_label">Keywords</string>
    <string name="keywords_description">Separate multiple keywords with commas.</string>
    <string name="keywords_hint">Detection Keywords (comma separated). Enter allow-keyword-empty without quotes for empty title, text, &amp; subtext.</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="delete_custom_app_title">Delete Custom App</string>
    <string name="delete_custom_app_message_format">Do you want to delete %1$s? It\'s not recoverable.</string>
    <string name="notification_access">Notification Access</string>
    <string name="ad_muting_status">Ad-Muting Status</string>
    <string name="enable_ad_silence">Enable Ad-Silence</string>
    <string name="debug_log">Debug Log</string>
    <string name="custom_detection">Custom Detection</string>
    <string name="mock">Mock</string>

    <string name="clear">Clear</string>
    <string name="channel_name">Service Status</string>
    <string name="channel_description">Persistent notification showing that AdSilence is active</string>
    <string name="notification_update_help">If mute or detection is not working, try enabling this.</string>

    <!-- Settings Strings -->
    <string name="settings">Settings</string>
    <string name="mute_behavior_title">Mute Behavior</string>
    <string name="mute_entire_device">Mute Entire Device</string>
    <string name="mute_entire_device_desc">If enabled, the entire device (including ringer) will be muted. If disabled, only the music stream is muted.</string>
    <string name="mute_behavior_help" formatted="false">Not sure which one to choose? <![CDATA[<a href="https://github.com/aghontpi/ad-silence/wiki/Mute%E2%80%90behaviour%E2%80%90settings">Read here!</a>]]></string>
    <string name="force_mute_title">Force Mute (Don\'t check existing mute)</string>
    <string name="force_mute_desc">Mute ads without checking if the media is already muted.</string>

    <string name="casting_mute_title">Casting</string>
    <string name="casting_mute_desc">Mute ads while casting to other devices (e.g. Google Home, Chromecast).</string>

    <string name="reset_app_configuration">Reset App Configuration</string>
    <string name="reset_custom_app_message_format">Are you sure? Your changes for %1$s will be reset to default.</string>
    <string name="jio_saavn_pkg_name" translatable="false">com.jio.media.jiobeats</string>
    <string name="jio_saavn_ad_string" translatable="false">Advertisement</string>
    <string name="jio_saavn" translatable="false">Jio Saavn</string>

    <!-- MIUI Autostart Strings -->
    <string name="miui_autostart_title">Enable Autostart</string>
    <string name="miui_autostart_message">On Xiaomi/MIUI devices, you must enable \'Autostart\' for Ad-silence to work reliability in the background. Please enable it in the next screen.</string>
    <string name="miui_autostart_button">Open Settings</string>
    <string name="miui_autostart_settings">Autostart settings</string>
    <string name="miui_autostart_ignore">Ignore</string>
</resources>
