<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/ad_silence_activity">

    <TextView
        android:id="@+id/permission_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp"
        android:text="@string/grant_permission_text_view" />

    <Button
        android:id="@+id/grant_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/grant_permission_button"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/disable_hibernation_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp"
        android:text="@string/disable_hibernation_text_view" />

    <Button
        android:id="@+id/disable_hibernation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/disable_hibernation"
        android:textIsSelectable="false" />

    <Switch
        android:id="@+id/enable_notifications_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingStart="4dp"
        android:paddingTop="12dp"
        android:paddingEnd="0dp"
        android:text="@string/notifications_optional" />

    <TextView
        android:id="@+id/notification_posting_permission_text_view"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:gravity="center"
        android:paddingLeft="4dp"
        android:paddingTop="8dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp"
        android:text="@string/grant_notification_posting_permission_text_view" />


    <Button
        android:id="@+id/grant_notification_posting_perimisison"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/grant_notification_posting_permission_button"
        android:textIsSelectable="false" />
</merge>