<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="12dp"
    tools:context=".AdSilenceActivity">

    <include layout="@layout/permission_granting" />

    <Switch
        android:id="@+id/status_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:text="@string/app_status" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select_apps_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_apps" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about" />

    </LinearLayout>

    <Button
        android:id="@+id/test_mute_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mute Audio"
        android:layout_marginTop="16dp"/>


    <!-- Add a TextView to show Android Auto (or "CarPlay") status -->
    <TextView
        android:id="@+id/car_play_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/car_play_status_not_connected"
        android:textSize="16sp"
        android:gravity="center" />

</LinearLayout>